--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -253,8 +253,8 @@
                 v-if="searchOngoing == true && searchComplete == false"
                 class="loader-container"
               >
-                Downloading and converting book. This could take 5 minutes or
-                longer.
+                Downloading and converting book. This could take a minute or
+                so.
               </div>
               <div v-if="searchComplete == true">[[detail]]</div>
             </button>
