--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Books</title>
+    <title>Books - now with 50% more calcium!</title>
 
     <link
       rel="stylesheet"
