Changed titles. BOOK HTML FIXING NOW WORKS!

--- a/bookquery/templates/bookquery/noresults.html
+++ b/bookquery/templates/bookquery/noresults.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
   <head>
-    <title>Books</title>
+    <title>Books - now with 50% more calcium!</title>
 
     <link
       rel="stylesheet"
