Little more helpful message

--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -253,7 +253,7 @@
                 v-if="searchOngoing == true && searchComplete == false"
                 class="loader-container"
               >
-                Downloading and converting book. This could take a few minutes.
+                Downloading and converting book. Be patient, this could take 2-5 minutes.
               </div>
               <div v-if="searchComplete == true">[[detail]]</div>
             </button>
