Changed status messages

--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -421,7 +421,7 @@
                   this.detail = error.data.detail
                 } else {
                   this.detail =
-                    "Something went wrong. If you were waiting for more than 5 minutes before this message, check your Kindle, the book may already be there."
+                    "Something went wrong. If you were waiting for more than 5 minutes before seeing this message, check your Kindle, the book may already be there.";
                 }
 
                 this.searchOngoing = false
