Show numdownloads on search page

--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -66,6 +66,9 @@
           </button>
         </div>
       </form>
+      <p></p>
+      <p></p>
+      <div>{{num_downloads}}
     </div>
 
     <div class="loader-div" v-if="clicked == true">
