--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -66,9 +66,7 @@
           </button>
         </div>
       </form>
-      <p></p>
-      <p></p>
-      <div>{{num_downloads}}
+
     </div>
 
     <div class="loader-div" v-if="clicked == true">
@@ -78,6 +76,9 @@
         minutes.</span
       >
     </div>
+    <p></p>
+    <p></p>
+    <div>{{num_downloads}} books have been downloaded by you criminals.</div>
   </body>
 </html>
 
