migrations, cleaned up presntation of download count

--- a/bookquery/templates/bookquery/results.html
+++ b/bookquery/templates/bookquery/results.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
   <head>
-    <title>Books - now with 50% more calcium!</title>
+    <title>So many choices!</title>
 
     <link
       rel="stylesheet"
