--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Books - now with 50% more calcium!</title>
+    <title>It's basically like a library.</title>
 
     <link
       rel="stylesheet"
@@ -66,6 +66,9 @@
           </button>
         </div>
       </form>
+      <p></p>
+    <p></p>
+    <div>{{num_downloads}} books "borrowed" so far.</div>
 
     </div>
 
@@ -76,9 +79,7 @@
         minutes.</span
       >
     </div>
-    <p></p>
-    <p></p>
-    <div>{{num_downloads}} books have been downloaded by you criminals.</div>
+    
   </body>
 </html>
 
