--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>It's basically like a library.</title>
+    <title>It's pretty much like a library.</title>
 
     <link
       rel="stylesheet"
@@ -68,7 +68,7 @@
       </form>
       <p></p>
     <p></p>
-    <div>{{num_downloads}} books "borrowed" so far.</div>
+    <div>Over {{num_downloads}} books liberated.</div>
 
     </div>
 
