Bit more clever

--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -68,7 +68,7 @@
       </form>
       <p></p>
     <p></p>
-    <div>Over {{num_downloads}} books liberated.</div>
+    <div>Together we've liberated {{num_downloads}} books to date.</div>
 
     </div>
 
