--- a/bookquery/templates/bookquery/noresults.html
+++ b/bookquery/templates/bookquery/noresults.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
   <head>
-    <title>No dice.</title>
+    <title>No dice, try again.</title>
 
     <link
       rel="stylesheet"
