--- a/user/templates/user/regcomplete.html
+++ b/user/templates/user/regcomplete.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Books. If you know, you know.</title>
+    <title>Books. You're almost there.</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -18,12 +18,9 @@
 
   <body>
     <div class="login-box">
-      <form method="POST">
-        {% csrf_token %} {{ form|crispy }}
-        <div>
-          <button class="login-button" type="submit">Login</button>
-        </div>
-      </form>
+      <p>
+        Successfully registered. Now you wait for my approval.
+      </p>
     </div>
   </body>
 </html>
