Changed some text

--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -74,7 +74,7 @@
 
     <div class="loader-div" v-if="clicked == true">
       <span class="loader-div"
-        >If this is taking too long, it means there are too many results. Try a
+        >If this is taking too long, there are probably too many results. Try a
         more specific search term, or keep waiting. This could take up to 5
         minutes.</span
       >
