--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -74,7 +74,7 @@
 
   <body id="app">
   	<div class="notification-top-bar">
-  		<p>The backend service (www.libgen.rs) for this site has been down since early August 2024. As of now it is unclear of or when this service will be back online. This could be the end folks. See www.reddit.com/r/libgen to learn more.</p>
+  		<p>The backend service (www.libgen.rs) for this site has been down since early August 2024. As of now it is unclear of or when this service will be back online. This could be the end folks. Click <a href="https://www.reddit.com/r/libgen" target="_blank">here</a> to learn more.</p>
 		</div>
     <div class="search-box">
       <div class="login-status">
