--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -56,7 +56,7 @@
 			.notification-top-bar p {
 			  padding: 0 10px; /* Keep some horizontal padding */
 			  margin: 0 auto;
-			  background-color: #eb2a3d;
+			  background-color: #189a05;
 			  line-height: 1.2; 
 			  overflow-wrap: break-word; /* Allow long words to break and wrap */
 			  max-width: 90%; /* Prevent the text from extending too far horizontally */
@@ -76,7 +76,7 @@
 
   <body id="app">
   	<div class="notification-top-bar">
-  		<p>The backend service (www.libgen.rs) for this site has been down since early August 2024. As of now it is unclear if, or when this service will be back online. This could be the end, folks. Click <a href="https://www.reddit.com/r/libgen" target="_blank">here</a> to learn more, and watch this space for updates.</p>
+  		<p>August 22 2024 - We are back! Search and downloads might be a little slow, but it should clear up in the next few days. Happy reading!</p>
 		</div>
     <div class="search-box">
       <div class="login-status">
