Fix color of banner

--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -41,7 +41,7 @@
 			  top: 0; /* Ensure the bar starts at the very top */
 			  left: 0;
 			  width: 100%;
-			  background: #eb2a3d;
+			  background: #189a05;
 			  text-align: center;
 			  color: #FFFFFF;
 			  font-family: sans-serif;
