--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -76,7 +76,7 @@
 
   <body id="app">
   	<div class="notification-top-bar">
-  		<p>Oct 2024 - Site is down, working on a fix. Stay tuned.</p>
+  		<p>Working on a fix.</p>
 		</div>
     <div class="search-box">
       <div class="login-status">
