--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -41,7 +41,7 @@
 			  top: 0; /* Ensure the bar starts at the very top */
 			  left: 0;
 			  width: 100%;
-			  background: #1db906;
+			  background: #189a05;
 			  text-align: center;
 			  color: #FFFFFF;
 			  font-family: sans-serif;
@@ -56,7 +56,7 @@
 			.notification-top-bar p {
 			  padding: 0 10px; /* Keep some horizontal padding */
 			  margin: 0 auto;
-			  background-color: #1db906;
+			  background-color: #189a05;
 			  line-height: 1.2; 
 			  overflow-wrap: break-word; /* Allow long words to break and wrap */
 			  max-width: 90%; /* Prevent the text from extending too far horizontally */
