Minor improvement to previous commit. Raised page limt to 20

--- a/bookquery/templates/bookquery/resultsoverflow.html
+++ b/bookquery/templates/bookquery/resultsoverflow.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
   <head>
-    <title>Too many results.</title>
+    <title>Thanks Iman.</title>
 
     <link
       rel="stylesheet"
@@ -18,7 +18,7 @@
 
   <body>
     <div class="results-box">
-      <h1>Too many results, try a more specific search term. Thanks Iman.</h1>
+      <h1>Too many results, try a more specific search term.</h1>
       <h2>
         <a class="search-again-link" href="{% url 'search' %}"
           >Click to try again.</a
