So many fixes, so much spaghetti

--- a/bookquery/templates/bookquery/search.html
+++ b/bookquery/templates/bookquery/search.html
@@ -41,7 +41,7 @@
 			  top: 0; /* Ensure the bar starts at the very top */
 			  left: 0;
 			  width: 100%;
-			  background: #9a0505;
+			  background: #107027;
 			  text-align: center;
 			  color: #FFFFFF;
 			  font-family: sans-serif;
@@ -56,7 +56,7 @@
 			.notification-top-bar p {
 			  padding: 0 10px; /* Keep some horizontal padding */
 			  margin: 0 auto;
-			  background-color: #9a0505;
+			  background-color: #107027;
 			  line-height: 1.2; 
 			  overflow-wrap: break-word; /* Allow long words to break and wrap */
 			  max-width: 90%; /* Prevent the text from extending too far horizontally */
@@ -76,7 +76,7 @@
 
   <body id="app">
   	<div class="notification-top-bar">
-  		<p>Libgen is down. Fix coming soon.</p>
+  		<p>Back online, but for how long no one knows.</p>
 		</div>
     <div class="search-box">
       <div class="login-status">
